--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 services:
   db:
-    container_name: project_db
+    container_name: bot_db
     image: postgres
     restart: always
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=admin
       - POSTGRES_DB=my_app
-      - PGPORT=5433
+      - PGPORT=5432
     ports:
-      - '5433:5433'
+      - '5432:5432'
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
     networks:
@@ -23,13 +23,14 @@ services:
   web:
     environment:
       - environment=prod
-    container_name: project_backend
+      - POSTGRES_HOST=bot_db
+    container_name: telegram_bot
     depends_on:
       db:
         condition: service_healthy
     build: .
     ports:
-      - "8000:8000"
+      - "8080:8080"
     networks:
       - common-net
 
