--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ POSTGRES_PASSWORD=admin
 POSTGRES_DB=my_app
 POSTGRES_PORT=5432
 POSTGRES_HOST=127.0.0.1
+SCHEDULER_HOST=192.168.2.2
 BOT_TOKEN=TOKEN
 WEBHOOK_BASE=WEBHOOK_BASE_URL
 WEBHOOK_PATH=/bot
